--- a/sequencememory.html
+++ b/sequencememory.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <nav class="navbar">
-    <a href="#">Home</a>
-    <a href="#">Sequence Memory</a>
-    <a href="#">Aim Trainer</a>
-    <a href="#">Leaderboards</a>
+      <a href="index.html" class="nav-btn">Home</a>
+      <a href="sequence-memory" class="nav-btn">Sequence Memory</a>
+      <a href="reaction-time.html" class="nav-btn">Reaction Time</a>
+      <a href="leaderboard.html" class="nav-btn">Leaderboards</a>
   </nav>
 
   <div class="container">
