--- a/sequencememory.html
+++ b/sequencememory.html
@@ -8,7 +8,7 @@
 <body>
   <nav class="navbar">
       <a href="index.html" class="nav-btn">Home</a>
-      <a href="aimtrainer" class="nav-btn">aimtrainer</a>
+      <a href="aimtrainer.html" class="nav-btn">aimtrainer</a>
       <a href="reaction-time.html" class="nav-btn">Reaction Time</a>
       <a href="leaderboard.html" class="nav-btn">Leaderboards</a>
   </nav>
