--- a/sequence-memory.html
+++ b/sequence-memory.html
@@ -7,10 +7,12 @@
 </head>
 <body>
   <nav class="navbar">
+    <div class="navbar-container">
       <a href="index.html" class="nav-btn">Home</a>
       <a href="aimtrainer.html" class="nav-btn">Aimtrainer</a>
       <a href="reaction-time.html" class="nav-btn">Reaction Time</a>
       <a href="leaderboard.html" class="nav-btn">Leaderboards</a>
+    </div>
   </nav>
 
   <div class="container">
