--- a/sequence-memory.html
+++ b/sequence-memory.html
@@ -9,7 +9,7 @@
   <nav class="navbar">
     <div class="navbar-container">
       <a href="index.html" class="nav-btn">Home</a>
-      <a href="sequence-memory" class="nav-btn">Sequence Memory</a>
+      <a href="aimtrainer.html" class="nav-btn">Aim Trainer</a>
       <a href="reaction-time.html" class="nav-btn">Reaction Time</a>
       <a href="leaderboard.html" class="nav-btn">Leaderboards</a>
     </div>
